<?xml version="1.0" encoding="utf-8"?>
<!-- TODO 14 ) Defining Info Screen's colors -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_splash_screen"
    tools:context=".activity.InfoActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/app_icon"/>

    <TextView
        android:id="@+id/app_name_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/info_color_primary_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/version_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_info"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/info_version_text"
        android:textColor="@color/info_color_secondary_text"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_number"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/info_developed_by_text"
        android:textColor="@color/info_color_secondary_text"
        android:textSize="16sp"/>

    <!-- TODO : 90 ) Adding Bottom Navigation Bar underneath main_screen_linearlayout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_screen_linearlayout">

        <include layout="@layout/layout_bottom_navigation_main" />

    </RelativeLayout>

</RelativeLayout>