<?xml version="1.0" encoding="utf-8"?>

<!-- TODO : 134 ) Designing Location Information Detail Screen -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_location_detail_color"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/location_information_phone_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location_information_phone_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/phone"
                android:src="@drawable/ic_phone_call_white"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/location_information_phone_icon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_website_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location_information_website_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/website"
                android:src="@drawable/ic_website_white"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/location_information_website_icon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/website"
                android:text="@string/website"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_favourite_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location_information_favourite_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/favourite"
                android:src="@drawable/ic_favorite_white_border"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/location_information_favourite_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/favourite"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/location_detail_information_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="4dp"
        android:elevation="2dp">

        <RelativeLayout
            android:id="@+id/location_detail_information_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/location_detail_information_small_location_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/small_location_icon"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_location_color"/>

            <TextView
                android:id="@+id/location_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/location_detail_information_small_location_icon"
                android:layout_toRightOf="@+id/location_detail_information_small_location_icon"
                android:textColor="@color/user_location_detail_text_color"
                android:textSize="16sp"
                tools:text="Location Address Name"/>

            <ImageView
                android:id="@+id/small_phone_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/location_address_text_view"
                android:contentDescription="@string/small_call_icon"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_call_color"/>


            <TextView
                android:id="@+id/location_phone_number_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/location_address_text_view"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/small_phone_icon"
                android:layout_toRightOf="@id/small_phone_icon"
                android:maxLines="1"
                android:textColor="@color/user_location_detail_text_color"
                android:textSize="16sp"
                tools:text="Location Phone Number"/>

            <ImageView
                android:id="@+id/small_website_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/location_phone_number_text_view"
                android:contentDescription="@string/small_website_icon"
                android:padding="8dp"
                android:src="@drawable/ic_website_color"/>

            <TextView
                android:id="@+id/location_website_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_phone_number_text_view"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/small_website_icon"
                android:layout_toRightOf="@id/small_website_icon"
                android:clickable="true"
                android:maxLines="1"
                android:textColor="@color/user_location_detail_text_color"
                android:textSize="16sp"
                tools:text="Website"/>

            <ImageView
                android:id="@+id/small_location_status_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/location_website_text_view"
                android:contentDescription="@string/small_location_status_icon"
                android:padding="8dp"
                android:src="@drawable/ic_status_color"/>

            <TextView
                android:id="@+id/location_status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_website_text_view"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/small_location_status_icon"
                android:layout_toRightOf="@id/small_location_status_icon"
                android:maxLines="1"
                android:textColor="@color/user_location_detail_text_color"
                android:textSize="16sp"
                tools:text="Status"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>